changes to webstie

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,5 +12,16 @@
   <h1>{{ page.title }}</h1>
   {{ content }}
 </div>
+
+<nav>
+<ul>
+  <li><a href="index.html">Home</li>
+<li><a href="our_story.html">Our Story</li>
+<li><a href="menu.html">Menu</li>
+<li><a href="upcoming_events.html">Upcoming Events</li>
+
+</ul>
+</nav>
+
 </body>
 </html>
