--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,15 +13,16 @@
   {{ content }}
 </div>
 
-<nav>
-<ul>
-  <li><a href="index.html">Home</li>
-<li><a href="our_story.html">Our Story</li>
-<li><a href="menu.html">Menu</li>
-<li><a href="upcoming_events.html">Upcoming Events</li>
-
-</ul>
-</nav>
+<div class ="row">
+  <div class="col-md-4">
+    <nav>
+    <ul>
+    <li><a href="index.html">Home</li>
+    <li><a href="my_page.html">News/Reviews</li>
+    <li><a href="games.html">Games</li>
+    <li><a href="about.html">About</li>
+    </ul>
+    </nav>
 
 </body>
 </html>
