--- a/_layouts/fake_bootstrap.html
+++ b/_layouts/fake_bootstrap.html
@@ -32,7 +32,7 @@
     {{ content }}
   </div>
   <div class="col-md-3">
-    {% if page.category== "Getting Started %"}
+    {% if page.category== "Getting Started" %}
     <ul class="list-unstyled">
       <li>Download</li>
       <li>What's Included</li>
@@ -40,7 +40,7 @@
       <li>Basic Template</li>
     </ul>
     {% endif %}
-    
+
   </div>
 </div>
 <div>
