changes to project

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 <div class ="row">
   <div class="col-md-4">
     <nav>
-    <ul>
+    <ul class="list-inline">
     <li><a href="index.html">Home</li>
     <li><a href="my_page.html">News/Reviews</li>
     <li><a href="games.html">Games</li>
