--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,10 +17,10 @@
   <div class="col-md-12">
     <nav>
     <ul class="list-inline nav_bar" >
-    <li><a href="index.html">Home</li>
-    <li><a href="my_page.html">News/Reviews</li>
-    <li><a href="games.html">Games</li>
-    <li><a href="about.html">About</li>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="my_page.html">News/Reviews</a></li>
+    <li><a href="games.html">Games</a></li>
+    <li><a href="about.html">About</a></li>
     </ul>
     </nav>
     {{ content }}
