--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,10 +24,13 @@
     </ul>
     </nav>
   </div>
-</div>   
+</div>
     <div class = "container-fluid">
       <div class = "row">
+        <div class="col-md-12">
+
 {{content}}
+</div> 
 </div>
 
 </body>
