--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,9 +10,7 @@
 <body>
 <div class="container-fluid">
   <h1>{{ page.title }}</h1>
-
-
-
+</div> 
     <nav>
     <ul class="list-inline nav_bar" >
     <li><a href="index.html">Home</a></li>
@@ -24,6 +22,7 @@
     <div class = "container-fluid">
       <div class = "row">
 {{content}}
+</div>
 </div>
 
 </body>
