--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ body {
   background-image: url("../../Images/marble.jpg");
 }
 
-#newsOne{
-  margin-left: 50px; 
+#reviewOne{
+  margin-left: 50px;
 
 }
