--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,16 +31,7 @@ body {
   margin-left: 50px;
 }
 
-#botOne{
+#imgOne{
 
   float: right;
-}
-
-#buttonOne{
-  float: right;
-}
-
-
-#tabletOne{
-  float: right; 
 }
