--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,10 @@
+@import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300);
+
 .col-md-1 {
   border-left: 1px solid black;
   border-right: 1px solid black;
   height: 1080px;
 }
-
 
 nav {
 	background-color: black;
@@ -16,6 +17,8 @@ text-align: center;
 
 body {
   background-image: url("../../Images/marble.jpg");
+  font-family: 'Open Sans Condensed', sans-serif;
+  color: red; 
 }
 
 #reviewOne{
