--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ text-align: center;
 body {
   background-image: url("../../Images/marble.jpg");
   font-family: 'Open Sans Condensed', sans-serif;
-  color: red; 
+  color: black; 
 }
 
 #reviewOne{
