--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
     <ul class="list-inline nav_bar" >
     <li><a href="index.html">Home</a></li>
     <li><a href="games.html">Games</a></li>
-    <li><a href="about.html">About</a></li>
+    <li><a href="About.html">About</a></li>
     </ul>
     </nav>
 
