--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-<div class="container-fluid">
+<div class="container">
   <h1>{{ page.title }}</h1>
 </div>
     <nav>
